--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -19,10 +22,15 @@ jobs:
         python-version: '3.10'
         architecture: 'x64'
 
-    - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Install Python dependencies with retry
+      uses: nick-fields/retry@v2
+      with:
+        max_attempts: 3
+        retry_on: error
+        timeout_minutes: 15
+        command: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -41,20 +49,34 @@ jobs:
         cd frontend
         npm run build
 
-    - name: Install Nuitka
+    - name: Create resources directory
       run: |
-        pip install nuitka
-        
+        if (-not (Test-Path -Path "res")) {
+          New-Item -ItemType Directory -Path "res"
+          Write-Output "创建资源目录: res"
+        }
+
     - name: Build executable with Nuitka
+      env:
+        NUITKA_DOWNLOAD_GCC: "yes"
       run: |
-        $env:NUITKA_DOWNLOAD_GCC="yes"; python scripts/pack.py
+        python scripts/pack.py
+
+    - name: Verify build output
+      run: |
+        if (-not (Test-Path -Path "out/AutoFF.dist/AutoFF.exe")) {
+          Write-Error "构建失败: 未找到输出的AutoFF.exe文件"
+          exit 1
+        }
+        Write-Output "构建验证成功: 找到AutoFF.exe文件"
 
     - name: Bump version and push tag
       id: tag_version
       uses: mathieudutour/github-tag-action@v6.2
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        
+        default_bump: patch
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -63,7 +85,14 @@ jobs:
       with:
         tag_name: ${{ steps.tag_version.outputs.new_tag }}
         release_name: Release ${{ steps.tag_version.outputs.new_tag }}
-        body: ${{ steps.tag_version.outputs.changelog }}
+        body: |
+          ## AutoFF 更新内容
+          ${{ steps.tag_version.outputs.changelog }}
+          
+          ### 发布信息
+          - 构建时间: ${{ github.event.head_commit.timestamp }}
+          - 提交信息: ${{ github.event.head_commit.message }}
+          - 提交作者: ${{ github.event.head_commit.author.name }}
         draft: false
         prerelease: false
 
@@ -77,3 +106,10 @@ jobs:
         asset_path: out/AutoFF.dist/AutoFF.exe
         asset_name: AutoFF.exe
         asset_content_type: application/octet-stream
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: AutoFF-build
+        path: out/AutoFF.dist
+        retention-days: 14
